app1-all-in-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers: 
        - name: app1
          image: nginx
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: app1-index-file
              mountPath: /usr/share/nginx/html/app1/
      volumes:
        - name: app1-index-file
          configMap: 
            name: app1-html-configmap

---

apiVersion: v1
kind: Service
metadata: 
  name: app1
  labels: 
    app: nginx-app1
spec:
  ports:
    - name: http
      port: 80
  selector: 
    app: nginx-app1
  type: ClusterIP
