app2-all-in-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers: 
        - name: app2
          image: akstestfree.azurecr.io/nginx-app2:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
      #     volumeMounts:
      #       - name: app2-index-file
      #         mountPath: /usr/share/nginx/html/app2/
      # volumes:
      #   - name: app2-index-file
      #     configMap: 
      #       name: app2-html-configmap

---

apiVersion: v1
kind: Service
metadata: 
  name: app2
  labels: 
    app: nginx-app2
spec:
  ports:
    - name: http
      port: 80
  selector: 
    app: nginx-app2
  type: ClusterIP

# ---



# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: app2-html-configmap
#   namespace: default
# data:
#   index.html: |
#     <html>
#     <h1>Welcome</h1>
#     </br>
#     <h1>Hi! This is a app2 </h1>
#     </html>
