app3-all-in-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        app: nginx-app3
  template:
    metadata:
      labels:
        app: nginx-app3
    spec:
      containers: 
        - name: app3
          image: nginx
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: app3-index-file
              mountPath: /usr/share/nginx/html/app3/
      volumes:
        - name: app3-index-file
          configMap: 
            name: app3-html-configmap

---

apiVersion: v1
kind: Service
metadata: 
  name: app3
  labels: 
    app: nginx-app3
spec:
  ports:
    - name: http
      port: 80
  selector: 
    app: nginx-app3
  type: ClusterIP
