app3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /app3
        pathType: Prefix
        backend:
          service: 
            name: app3
            port:
             number: 80
